# FileConversionScripts

./: CMakeLists.txt  DicomSeriesReadImageWrite.py  DicomSeriesReadImageWriteInstance.cxx  DicomTimeSeriesReadImageWrite.cxx  DicomTimeSeriesReadImageWrite.py  README  README.md  SDAphantom.ini  cmake.makefile  convertExodusToMatlab.py  convertJPGDCM.py  convertSTLVTKImage.py  convertVTKMatlab.py  debugtags.py  dog1.ini  funtez.ini  innovador.ini  makefile  saveVTKFile.m  tesla.ini  updatesqldb.py
dce/: CMakeLists.txt  DicomTimeSeriesReadImageWrite.cxx  README  cmake.makefile
itkdocker/: README
itkdocker/tag-insighttoolkit4.13/: CMakeLists.txt  Dockerfile
seriesreadimagewrite/: CMakeLists.txt  makefile
seriesreadwriteall/: CMakeLists.txt  DicomSeriesReadImageWriteAll.cxx  README
